we can go back from solution page
to home page